--- a/src/components/Button/styles.module.scss
+++ b/src/components/Button/styles.module.scss
@@ -1,17 +1,35 @@
 @import '@styles/mixins.module.scss';
 @import '@styles/variable.module.scss';
+
 .btn {
-  color: $white_color;
+  @include btn(176px, 42px, 3px, $primary_color);
   font-size: 14px;
   font-weight: 300;
-  background-color: $primary_color;
-  padding: 13px 45px;
-  outline: none;
-  border-radius: 3px;
-  border: 1px solid $primary_color;
   cursor: pointer;
-  transition: all 0.3s;
+
+  &:hover {
+    transition: background-color 300ms;
+  }
+}
+
+.primaryBtn {
+  background-color: $primary_color;
+  color: $white_color;
+
   &:hover {
     background-color: transparent;
+    color: $primary_color;
+    border: 1px solid $primary_color;
+  }
+}
+
+.secondaryBtn {
+  background-color: $white_color;
+  color: $primary_color;
+  border: 1px solid $primary_color;
+
+  &:hover {
+    background-color: $primary_color;
+    color: $white_color;
   }
 }
