--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -3,8 +3,6 @@
 
 .container {
   @include flex_box_custom(center, center, 0);
-  position: absolute;
-  top: 0;
   left: 0;
   right: 0;
 }
@@ -12,6 +10,20 @@
   @include flex_box_custom(space-between, center, 0);
   height: 83px;
   width: 1250px;
+}
+.topHeader {
+  position: absolute;
+  top: 0;
+}
+.fixedHeader {
+  position: fixed;
+  top: -83px;
+  background-color: #ffffffe6;
+  z-index: 999;
+  transform: translateY(83px);
+  box-shadow: 2px 0px 12px 0px rgba(0, 0, 0, 0.15);
+  backdrop-filter: blur(5px);
+  transition: transform 0.5s ease;
 }
 .containerBoxIcon {
   @include flex_box_custom(center, center, 10px);
